# cvsteer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.boost  LICENSE.bsd  README.md  README.rst  SteerableFilters.cpp  SteerableFilters.h  SteerableFiltersG2.cpp  SteerableFiltersG2.h  SteerableFiltersG4.cpp  SteerableFiltersG4.h  appveyor.yml  cvextra.cpp  cvutil.cpp  cvutil.h  steer.cpp
cmake/: Config.cmake.in
cmake/Hunter/: config.cmake
cmake/modules/: AlwaysFullRPATH.cmake
cvsteer/: CMakeLists.txt  Pyramid.cpp  Pyramid.h  SteerableFilters.cpp  SteerableFilters.h  SteerableFiltersG2.cpp  SteerableFiltersG2.h  SteerableFiltersG4.cpp  SteerableFiltersG4.h  cvsteer.h
example/: CMakeLists.txt  steer.cpp
test/: CMakeLists.txt  Pterois_volitans_Manado-e_edit_smallest.h  edges.h  linesBright.h  linesDark.h  steer.cpp  test.cpp
